[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "fastapi_users_db_deta_base"
dist-name = "fastapi-users-db-deta_base"
author = "Scott Morken"
author-email = "scottm361@gmail.com"
home-page = "https://github.com/fastapi-users/fastapi-users-db-deta_base"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
description-file = "README.md"
requires-python = ">=3.7"
requires = [
    "fastapi-users >= 6.1.2"
]

[tool.flit.metadata.urls]
Documentation = "https://fastapi-users.github.io/fastapi-users"
